--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@unsass/breakpoint": "^2.4.0",
 		"lucide-svelte": "^0.506.0",
 		"modern-normalize": "^3.0.1",
+		"nprogress": "^0.2.0",
 		"pkce-gen": "^1.1.0",
 		"tippy.js": "^6.3.7"
 	}
